--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="nextTxt1">Lorem Ipsum is simply dummy text of the\n printing and typesetting industry. Lorem\n Ipsum has been the industry s</string>
     <string name="nextTxt2">Lorem Ipsum is simply dummy text of the\n printing and typesetting industry. Lorem\n Ipsum has been the industry s</string>
+    <string name="login">Login</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
